@@ -1,14 +1,18 @@
 const quietly = require('./quietly.js');
 const loudly = require('./loudly.js');
 const channel = require('./channel.js');
+const mocking = require ('./mocking.js');
 
 const metacommandArray = [
 	quietly,
 	loudly,
 	channel,
+	mocking,
 ];
 
 const run = (state) => {
+	state.transformFn = (s) => s;
+	state.sendFn = (s) => state.message.channel.send(s);
 	let updated = true;
 	while(updated) {
 		updated = false;
@@ -20,6 +24,7 @@ const run = (state) => {
 			}
 		}
 	}
+	state.sendMessage = (m) => m && state.sendFn(state.transformFn(m))
 	return state;
 }
 
